--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,11 +16,63 @@
 </head>
 <body>
 
+  <main class="contenedor">
+    <img src="./images/logo.svg" alt="Logo splitter">
 
+    <section class="calculadora">
+      <form class="formulario">
+        <div class="input-contenedor input-propina">
+          <label for="cuenta">Cuenta</label>
+          <input type="text" placeholder="0" >
+        </div>
+
+        <div class="input-contenedor">
+          <label>Propina %</label>
+          <div class="botones-propina">
+            <input type="button" class="boton-propina" value="5%">
+            <input type="button" class="boton-propina" value="10%">
+            <input type="button" class="boton-propina" value="15%">
+            <input type="button" class="boton-propina" value="25%">
+            <input type="button" class="boton-propina" value="50%">
+            <input type="text" class="propina" placeholder="Custom">
+          </div>
+        </div>
+
+        <div class="input-contenedor input-personas">
+          <label>Número de personas</label>
+          <input type="text" placeholder="0">
+        </div>
+
+      </form>
+
+      <div class="resultados">
+        <div class="resultados__contenido">
+          <div class="resultado__contenedor">
+            <div class="resultado__texto">
+              <p>Propina</p>
+              <p>/ persona</p>
+            </div>
+
+            <div class="resultado__cantidad">
+              $0.00
+            </div>
+          </div> <!--propina-->
+
+          <div class="resultado__contenedor">
+            <div class="resultado__texto">
+              <p>Total</p>
+              <p>/ persona</p>
+            </div>
+            <div class="resultado__cantidad">
+              <p>$0.00</p>
+            </div>
+          </div>
+        </div>
+
+        <input disabled="true" type="button" class="reset" value="Reset">
+      </div>
+    </section> <!--Calculadora-->
+  </main>
   
-  <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>. -->
-  </div>
 </body>
 </html>
