Estados activos agregados

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="input-contenedor">
           <label>Propina %</label>
           <div class="botones-propina">
-            <input type="button" class="boton-propina" value="5%">
+            <input type="button" class="boton-propina boton-propina--activo" value="5%">
             <input type="button" class="boton-propina" value="10%">
             <input type="button" class="boton-propina" value="15%">
             <input type="button" class="boton-propina" value="25%">
