--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./css/style.css">
   
-  <title>Frontend Mentor | Tip calculator</title>
+  <title>Frontend Mentor | Tip calculator app</title>
 
 </head>
 <body>
